syntax = "proto3";

option csharp_namespace = "XeGo.Services.Vehicle.Grpc.Protos";

service VehicleProtoService {
	rpc GetVehicleByDriverId(GetVehicleByDriverIdRequest) returns (VehicleResponse);
}

message GetVehicleByDriverIdRequest {
	string driverId = 1;
}

message VehicleResponse {
  string data = 1;
  bool isSuccess = 2;
  string message = 3;
}